crates/stef-doc/tests/snapshots/render__render@enum_min_ws.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "enum Sample<T>{One@1,Two(u32@1,u64@2,T@3)@2,Three{field1:u32@1,field2:bool@2,field3:T@3}@3}"
input_file: crates/stef-parser/tests/inputs/enum_min_ws.stef
---
--- enum_min_ws/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>enum_min_ws - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema enum_min_ws</h2>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-enum" href="enum.Sample.html">Sample</a>
      </td>
      <td>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- enum_min_ws/enum.Sample.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>Sample - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Enum
    <a href="index.html">enum_min_ws</a>::<span class="name-enum">Sample</span>
  </h2>
  <pre class="item-definition my-2">enum Sample&lt;T&gt; {
    One @1,
    Two(u32 @1, u64 @2, T @3) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
        field3: T @3,
    } @3,
}
</pre>
  <div class="markdown pl-6">
    
  </div>
</div>
<div class="section">
  <h3>Variants</h3>
  <ul>
    <li class="field-definition">
      <pre class="name-variant text-lg">One</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Two</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">0</span>:
              <span class="field-type">u32</span>
              <span class="field-id">@1</span>
            </code>
          </li>
          <h4 class="my-2">Metadata</h4>
          <div class="text-sm">
            <p>The size range is:</p>
            <div
              class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
              <p><strong>u32</strong> <code>1..5</code></p>
            </div>
          </div>
          <li>
            <code>
              <span class="field-name">1</span>:
              <span class="field-type">u64</span>
              <span class="field-id">@2</span>
            </code>
          </li>
          <h4 class="my-2">Metadata</h4>
          <div class="text-sm">
            <p>The size range is:</p>
            <div
              class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
              <p><strong>u64</strong> <code>1..10</code></p>
            </div>
          </div>
          <li>
            <code>
              <span class="field-name">2</span>:
              <span class="field-type">T</span>
              <span class="field-id">@3</span>
            </code>
          </li>
        </ul>
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Three</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">field1</span>:
              <span class="field-type">u32</span>
              <span class="field-id">@1</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
            <div class="pl-4">
              <h4 class="my-2">Metadata</h4>
              <div class="text-sm">
                <p>The size range is:</p>
                <div
                  class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
                  <p><strong>u32</strong> <code>1..5</code></p>
                </div>
              </div>
            </div>
          </li>
          <li>
            <code>
              <span class="field-name">field2</span>:
              <span class="field-type">bool</span>
              <span class="field-id">@2</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
            <div class="pl-4">
              <h4 class="my-2">Metadata</h4>
              <div class="text-sm">
                <p>The size range is:</p>
                <div
                  class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
                  <p><strong>bool</strong> <code>1</code></p>
                </div>
              </div>
            </div>
          </li>
          <li>
            <code>
              <span class="field-name">field3</span>:
              <span class="field-type">T</span>
              <span class="field-id">@3</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
