crates/stef-doc/tests/snapshots/render__render@schema_basic.stef.snap
---
source: crates/stef-doc/tests/render.rs
description: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/stef-parser/tests/inputs/schema_basic.stef
---
--- schema_basic/index.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>schema_basic - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>Schema schema_basic</h2>
</div>
<div class="section">
  <h3>Modules</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Structs</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-struct" href="struct.SampleStruct.html">SampleStruct</a>
      </td>
      <td>
        <p>Basic struct.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Enums</h3>
  <table>
    <tr>
      <td class="pr-8">
        <a class="text-lg name-enum" href="enum.SampleEnum.html">SampleEnum</a>
      </td>
      <td>
        <p>Sample enum.</p>
      </td>
    </tr>
  </table>
</div>
<div class="section">
  <h3>Aliases</h3>
  <table>
  </table>
</div>
<div class="section">
  <h3>Constants</h3>
  <table>
  </table>
</div>
    </main>
  </body>
</html>

--- schema_basic/struct.SampleStruct.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>SampleStruct - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Struct
    <a href="index.html">schema_basic</a>::<span class="name-struct">SampleStruct</span>
  </h2>
  <pre class="item-definition my-2">/// Basic struct.
struct SampleStruct {
    a: u32 @1,
    b: bool @2,
}
</pre>
  <div class="markdown pl-6">
    <p>Basic struct.</p>
  </div>
</div>
<div class="section">
  <h3>Metadata</h3>
  <div class="pl-6 mt-2">
    <p>The next free ID is <code class="font-bold">3</code></p>
  </div>
</div>
<div class="section">
  <h3>Fields</h3>
  <ul>
    <li class="field-definition">
      <code>
        <span class="field-name">a</span>:
        <span class="field-type">u32</span>
        <span class="field-id">@1</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>u32</strong> <code>1..5</code></p>
        </div>
      </div>
    </li>
    <li class="field-definition">
      <code>
        <span class="field-name">b</span>:
        <span class="field-type">bool</span>
        <span class="field-id">@2</span>
      </code>
      <div class="markdown pl-6">
        
      </div>
      <h4 class="my-2">Metadata</h4>
      <div class="text-sm">
        <p>The size range is:</p>
        <div
          class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
          <p><strong>bool</strong> <code>1</code></p>
        </div>
      </div>
    </li>
  </ul>

    </main>
  </body>
</html>

--- schema_basic/enum.SampleEnum.html

<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />

    
    <link rel="stylesheet" href="../assets/style.css" />

    <title>SampleEnum - Stef</title>
  </head>
  <body>
    <nav>
    </nav>
    <main>
<div class="section">
  <h2>
    Enum
    <a href="index.html">schema_basic</a>::<span class="name-enum">SampleEnum</span>
  </h2>
  <pre class="item-definition my-2">/// Sample enum.
enum SampleEnum {
    One @1,
    Two(u32 @1, u64 @2) @2,
    Three {
        field1: u32 @1,
        field2: bool @2,
    } @3,
}
</pre>
  <div class="markdown pl-6">
    <p>Sample enum.</p>
  </div>
</div>
<div class="section">
  <h3>Variants</h3>
  <ul>
    <li class="field-definition">
      <pre class="name-variant text-lg">One</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Two</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">0</span>:
              <span class="field-type">u32</span>
              <span class="field-id">@1</span>
            </code>
          </li>
          <h4 class="my-2">Metadata</h4>
          <div class="text-sm">
            <p>The size range is:</p>
            <div
              class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
              <p><strong>u32</strong> <code>1..5</code></p>
            </div>
          </div>
          <li>
            <code>
              <span class="field-name">1</span>:
              <span class="field-type">u64</span>
              <span class="field-id">@2</span>
            </code>
          </li>
          <h4 class="my-2">Metadata</h4>
          <div class="text-sm">
            <p>The size range is:</p>
            <div
              class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
              <p><strong>u64</strong> <code>1..10</code></p>
            </div>
          </div>
        </ul>
      </div>
    </li>
    <li class="field-definition">
      <pre class="name-variant text-lg">Three</pre>
      <div class="markdown pl-6">
        
      </div>
      <div class="pl-6">
        <h4>Fields</h4>
        <ul>
          <li>
            <code>
              <span class="field-name">field1</span>:
              <span class="field-type">u32</span>
              <span class="field-id">@1</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
            <div class="pl-4">
              <h4 class="my-2">Metadata</h4>
              <div class="text-sm">
                <p>The size range is:</p>
                <div
                  class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
                  <p><strong>u32</strong> <code>1..5</code></p>
                </div>
              </div>
            </div>
          </li>
          <li>
            <code>
              <span class="field-name">field2</span>:
              <span class="field-type">bool</span>
              <span class="field-id">@2</span>
            </code>
            <div class="markdown pl-4">
              
            </div>
            <div class="pl-4">
              <h4 class="my-2">Metadata</h4>
              <div class="text-sm">
                <p>The size range is:</p>
                <div
                  class="markdown markdown-sm markdown-p:mb-1 markdown-ul:m-0 markdown-ul:pl-4 markdown-li:m-0 markdown-li:pl-0">
                  <p><strong>bool</strong> <code>1</code></p>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>

    </main>
  </body>
</html>
